# OpenHRC

./: .clang-format  .gitignore  .gitmodules  CITATION.cff  Dockerfile  Doxyfile  Odometry_8h.html  Odometry_8h__dep__incl.map  Odometry_8h__dep__incl.md5  Odometry_8h__incl.map  Odometry_8h__incl.md5  Odometry_8h_source.html  Point_8cpp.html  Point_8cpp__incl.map  Point_8cpp__incl.md5  Point_8cpp_source.html  Point_8h.html  Point_8h__dep__incl.map  Point_8h__dep__incl.md5  Point_8h__incl.map  Point_8h__incl.md5  Point_8h_source.html  README.md  Twist_8cpp.html  Twist_8cpp__incl.map  Twist_8cpp__incl.md5  Twist_8cpp_source.html  Twist_8h.html  Twist_8h__dep__incl.map  Twist_8h__dep__incl.md5  Twist_8h__incl.map  Twist_8h__incl.md5  Twist_8h_source.html  Vector3_8cpp.html  Vector3_8cpp__incl.map  Vector3_8cpp__incl.md5  Vector3_8cpp_source.html  Vector3_8h.html  Vector3_8h__dep__incl.map  Vector3_8h__dep__incl.md5  (+1770 more)
ohrc_common/: CMakeLists.txt  package.xml
ohrc_common/include/ohrc_common/: coordination_utility.h  filter_utility.h  gazebo_utility.h  math_utility.h  matplotlibcpp-eigen.hpp  matplotlibcpp.h  model_utility.h  rclcpp_utility.hpp  std_utility.h  subscriber_utility.h  transform_utility.h  utility.h
ohrc_common/scripts/: check_controller_manager.py  rosbag_record.py
ohrc_common/src/: coordination_utility.cpp  filter_utility.cpp  gazebo_utility.cpp  math_utility.cpp  std_utility.cpp  subscriber_utility.cpp  transform_utility.cpp
ohrc_common/src/filter_utility/: bayes_normal_gamma.cpp  butterworth.cpp  kalman.cpp
ohrc_common/src/geometry_msgs_utility/: Point.cpp  Twist.cpp  Vector3.cpp  Wrench.cpp  WrenchStamped.cpp
ohrc_common/src/nav_msgs_utility/: Odometry.cpp
ohrc_common/src/test/: ohrc_common-test.cpp
ohrc_control/: CMakeLists.txt  package.xml
ohrc_control/config/: admittance_config.yaml  config.yaml
ohrc_control/include/: magic_enum.hpp
ohrc_control/include/ohrc_control/: admittance_controller.hpp  arm_marker.hpp  cart_controller.hpp  control.hpp  feedback_controller.hpp  forwarding_controller.hpp  hybrid_feedback_controller.hpp  interface.hpp  multi_cart_controller.hpp  multi_my_ik.hpp  my_ik.hpp  ohrc_control.hpp  position_feedback_controller.hpp  single_control.hpp  single_interface.hpp
ohrc_control/launch/: ohrc_control.launch.py  ohrc_control.xml
ohrc_control/msg/: StateStamped.msg
ohrc_control/src/: admittance_controller.cpp  cart_controller.cpp  feedback_controller.cpp  forwarding_controller.cpp  hybrid_feedback_controller.cpp  multi_cart_controller.cpp  multi_my_ik.cpp  my_ik.cpp  position_feedback_controller.cpp
ohrc_hw_config/: CMakeLists.txt  README.md  package.xml
ohrc_hw_config/config/crane_x7/: crane_x7_hw_config.yaml  crane_x7_wtih_table.launch
ohrc_hw_config/config/fetch/: fetch_control_config_vel_trj.yaml
ohrc_hw_config/config/mycobot/: mycobot_control_config_vel_trj.yaml
ohrc_hw_config/config/seed/: seed_control_config_pos_trj.yaml  seed_control_config_vel_trj.yaml  seed_hw_config.yaml
ohrc_hw_config/config/toroboarm/: toroboarm_control_config_vel.yaml  toroboarm_hw_config.yaml
ohrc_hw_config/config/ur5e/: ur5e_bringup.launch  ur5e_control_config_vel.yaml  ur5e_control_config_vel_trj.yaml  ur5e_hw_config.yaml  ur_control.launch.xml
ohrc_hw_config/config/ur5e_toroboarm/: ur5e_toroboarm_control_config_vel.yaml
ohrc_hw_config/crane_x7/: crane_x7_control_config_pos_trj.yaml  crane_x7_control_config_vel_trj.yaml  crane_x7_hw_config.yaml  crane_x7_wtih_table.launch
ohrc_hw_config/fetch/: fetch.launch.xml  fetch_control_config_pos_trj.yaml  fetch_control_config_vel_trj.yaml  fetch_hw_config.yaml
ohrc_hw_config/mycobot/: mycobot_control_config_pos_trj.yaml  mycobot_control_config_vel_trj.yaml  mycobot_hw_config.yaml
ohrc_hw_config/panda/: panda.launch  panda_control_config_vel.yaml  panda_hw_config.yaml
ohrc_hw_config/seed/: fetch_control_config_pos_trj.yaml  seed_control_config_pos_trj.yaml  seed_control_config_vel_trj.yaml  seed_hw_config.yaml
ohrc_hw_config/toroboarm/: toroboarm_control_config_vel.yaml  toroboarm_hw_config.yaml
ohrc_hw_config/ur5e/: ur5e_bringup.launch  ur5e_control_config_pos_trj.yaml  ur5e_control_config_vel.yaml  ur5e_control_config_vel_trj.yaml  ur5e_controllers.yaml  ur5e_hw_config.yaml
ohrc_hw_config/ur5e_toroboarm/: marker_teleoperation.launch  ur5e_control_config_vel.yaml  ur5e_toroboarm_bringup.launch  ur5e_toroboarm_control_config_vel.yaml
ohrc_msgs/: CMakeLists.txt  package.xml
ohrc_msgs/msg/: BodyState.msg  Contact.msg  Gripper.msg  HandState.msg  State.msg  StateStamped.msg
ohrc_msgs/srv/: GetTrajectories.srv
ohrc_teleoperation/: CMakeLists.txt  README.md  package.xml
ohrc_teleoperation/config/: joy_topic_config.yaml  omega_config.yaml  pose_topic_config.yaml  teleoperation.rviz  twist_topic_config.yaml  xr_body_config.yaml
ohrc_teleoperation/example/: load_ur5e.launch.xml  marker_ur5e.rviz  ur5e_bringup.launch  ur5e_control_config.yaml  ur5e_controllers.yaml  ur5e_teleoperation_config.yaml
ohrc_teleoperation/example/fetch/: fetch_control_config_pos_trj.yaml  fetch_control_config_trj.yaml  fetch_control_config_vel_trj.yaml  fetch_marker_teleoperation_pos_trj.launch  fetch_marker_teleoperation_trj.launch  fetch_marker_teleoperation_vel_trj.launch
ohrc_teleoperation/example/mycobot/: mycobot_control_config_vel_trj.yaml
ohrc_teleoperation/example/ur5e/: ur5e_bringup.launch  (+9 more)
ohrc_teleoperation/launch/: joy_topic_teleoperation.launch  k4abt_body_teleoperation.launch  marker_teleoperation.launch  marker_teleoperation.launch.py  marker_teleoperation_pos_trj.launch  marker_teleoperation_vel_trj.launch  ohrc_teleoperation.launch  ohrc_teleoperation.launch.py  ohrc_teleoperation.xml  omega_teleoperation.launch  pose_topic_teleoperation.launch  pose_topic_teleoperation.launch.py  state_topic_teleoperation.launch  state_topic_teleoperation.launch.py  twist_topic_teleoperation.launch  twist_topic_teleoperation.launch.py  xr_body_teleoperation.launch  xr_body_teleoperation.launch.py
ohrc_teleoperation/src/: marker_topic.cpp  passivity_observer.cpp  selector.cpp
(+1405 files in other folders)
