<?xml version="1.0"?>
<package format="3">
  <name>ohrc_common</name>
  <version>0.1.0</version>
  <description>The ohrccommon package</description>

  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPL</license>

  <author>Shunki Itadera</author>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>python-is-python3</depend>
  <depend>tf2_eigen</depend>
  <depend>kdl_parser</depend>
  <depend>urdf</depend>
  <depend>magic_enum</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
