<?xml version="1.0"?>
<package format="3">
  <name>ohrc_control</name>
  <version>0.1.0</version>
  <description>The ohrc_control package</description>

  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPL</license>

  <!-- <buildtool_depend>ament_cmake_auto</buildtool_depend> -->
  <depend>rclcpp</depend>
  <!-- <depend>boost</depend> -->
  <!-- <depend>trac_ik</depend> -->
  <!-- <depend>trac_ik_lib</depend> -->

  <depend>liborocos-kdl-dev</depend>
  <depend>libnlopt-dev</depend>
  <depend>libnlopt-cxx-dev</depend>

  <depend>control_msgs</depend>



  <depend>osqp</depend>
  <depend>osqp-eigen</depend>

  <depend>magic_enum</depend>


  <depend>liborocos-kdl</depend>
  <depend>xacro</depend>
  <depend>libnlopt0</depend>
  <!-- <depend>pr2_description</depend> -->

  <depend>interactive_markers</depend>
  <depend>tf2_kdl</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_eigen_kdl</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <!-- <depend>eigen_conversions</depend> -->
  <depend>ros2_controllers</depend>
  <depend>trajectory_msgs</depend>

  <depend>ohrc_common</depend>
  <depend>ohrc_msgs</depend>

  <depend>urdf</depend>
  
<export>
  <build_type>ament_cmake</build_type>
</export>
</package>
