<?xml version="1.0"?>
<package format="3">
  <name>ohrc_hw_config</name>
  <version>0.0.0</version>
  <description>The ohrc_hw_config package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shunki@todo.todo">shunki</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>



  <depend>universal_robots</depend>


 <export>
  <build_type>ament_cmake</build_type>
</export>
</package>
