<?xml version="1.0"?>
<package format="3">
  <name>ohrc_msgs</name>
  <version>0.1.0</version>
  <description>The ohrc_msgs package</description>

  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPLv2.1</license>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
