<?xml version="1.0"?>
<package format="3">
  <name>ohrc_teleoperation</name>
  <version>0.1.0</version>
  <description>The ohrc_teleoperation package</description>

  <maintainer email="s.itadera@aist.go.jp">Shunki Itadera</maintainer>
  <license>LGPL</license>

  <depend>rclcpp</depend>

  <depend>ohrc_control</depend>
  <depend>ohrc_msgs</depend>
  <depend>ohrc_common</depend>
  <depend>ohrc_hw_config</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <depend>urdf</depend>


  <depend>tf2_kdl</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_eigen_kdl</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
